<resources>
    <!-- Titles -->
    <string name="app_name">Hour-By-Hour</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="to_do_list_title">To Do:</string>

    <!-- File Storage -->
    <string name="saved_data_info">com.example.hour_by_hour.SAVED_DATA</string>
    <string name="saved_preferences_json">com.example.hour_by_hour.SAVED_PREFERENCES_JSON</string>
    <string name="set_repeatability_edit">Set Repeating</string>
    <string name="SAVE_DATA_TO_DO_LIST">com.example.hour_by_hour.SAVE_DATA_TO_DO_LIST</string>
    <string name="SAVE_DATA_COMPLETED_LIST">com.example.hour_by_hour.SAVE_DATA_COMPLETE_LIST</string>

    <!-- View values -->
    <string name="event_name">Name</string>
    <string name="location_name">Location</string>
    <string name="time_start">Start Time</string>
    <string name="time_end">End Time</string>
    <string name="description_tag">Description</string>
    <string name="alert_tag">Notifications</string>
    <string name="add_alert_tag">Add new Notification</string>
    <string name="to_do_name">Unable to read name</string>

    <!-- Menu Items -->
    <string name="edit_event_menu_add">Create Event</string>
    <string name="edit_event_menu_delete">Delete Event</string>
    <string name="change_to_to_do_list">To Do List</string>
    <string name="change_to_weekly_view">Weekly View</string>
    <string name="change_to_monthly_view">Monthly View</string>
    <string name="delete_event_button">Delete Event</string>
    <string name="add_item_to_do">Add new item</string>
    <string name="edit_event_button">Edit Task</string>
    <string name="to_do_dialog_done">Done</string>
    <string name="to_do_dialog_cancel">Cancel</string>

    <!-- intent extras -->
    <string name="EXTRA_TASK_INFO">com.example.hour_by_hour.TASK_INFO</string>
    <string name="EXTRA_CALENDAR_DAY">com.example.hour_by_hour.CALENDAR_DAY</string>
    <string name="EXTRA_TASK">com.example.hour_by_hour.TASK</string>

    <!-- Temp Values for placeholders-->
    <string name="text_name">Name</string>
    <string name="text_location">Location</string>
    <string name="text_select_date">Date</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="task_description">No Description</string>
    <string name="remove_items">remove_items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EXTRA_VIEW_SELECTION">com.example.hour_by_hour.EXTRA_VIEW_SELECTION</string>
    <string name="switch_lists_to_do">Switch Lists</string>
    <string name="create_to_do_dialog">Enter a name</string>
    <string name="EXTRA_TASK_EDIT">com.example.hour_by_hour.EXTRA_TASK_EDIT</string>
    -->
</resources>
